Make Capybara work. List bookmarks.

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,3 +1,10 @@
--@bookmarks.each do |bookmark|
-  %li.bookmark
-    =bookmark
+%h1 List of bookmarks
+
+%ul
+  -@bookmarks.each do |bookmark|
+    %li.bookmark
+      %a{href: bookmark.url}
+        =precede "(" do
+          =succeed ")" do
+            =bookmark.id
+        =bookmark.title
