--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -2,5 +2,7 @@
 %html
   %head
     %meta(charset="utf-8")
+    %link(rel='stylesheet' href='/main.css')
+    %link(rel='stylesheet' href='/css/foundation.min.css')
   %body
     =yield
