--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -5,4 +5,5 @@
     %link(rel='stylesheet' href='/main.css')
     %link(rel='stylesheet' href='/css/foundation.min.css')
   %body
-    =yield
+    .row
+      =yield
