--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,10 +1,11 @@
 %h1 List of bookmarks
 
-%ul
-  -@bookmarks.each do |bookmark|
-    %li.bookmark
-      %a{href: bookmark.url}
-        =precede "(" do
-          =succeed ")" do
-            =bookmark.id
-        =bookmark.title
+.row
+  %form(action='/bookmarks' method='post')
+    %p.large-6.medium-6.columns
+      %input(type='text' name='bookmark[title]' placeholder='Title')
+    %p.large-6.medium-6.columns
+      %input(type='text' name='bookmark[url]' placeholder='URL')
+    %p.large-12.columns
+      %button.tiny Create bookmark
+
