Unit and integration: remove bookmark.

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -9,3 +9,16 @@
     %p.large-12.columns
       %button.tiny Create bookmark
 
+.row
+  %ul
+    -@bookmarks.each do |bookmark|
+      %li.bookmark{id: "bookmark-#{bookmark.id}"}
+        %a{href: bookmark.url}
+          =precede "(" do
+            =succeed ")" do
+              =bookmark.id
+          =bookmark.title
+
+        %form.inline(method="post" action="/bookmarks/#{bookmark.id}")
+          %input(name="_method" type="hidden" value="delete")
+          %button.tiny.delete Delete
